--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+.small-display{
+    overflow: hidden;
+}
 nav{
     background-color: #128c7e;
     height: 100px;
@@ -16,11 +18,16 @@ li.nav-item{
 }
 
 #navbarNav{
+    margin: 0;
+    width: 100%;
     padding-left: 10%;
+    background-color: #128c7e;
+    z-index: 1;
 }
 .image img{
     display: none;
 }
+
 .small-display > p{
     display: none;
 }
@@ -33,6 +40,10 @@ li.nav-item{
 #terms{
     color: rgb(116, 116, 116);
 }
+.contents p{
+    display: none;
+}
+
 .middle{
     overflow: hidden;
 }
@@ -54,6 +65,15 @@ li.nav-item{
     #no{
         display: none;
     }
+    .contents p{
+        display: inline;
+    }
+    .links{
+        display: none;
+    }
+    #playstore{
+        max-width: 200px;
+    }
     .home-1 > a{
         display: none;
     }
@@ -68,15 +88,17 @@ li.nav-item{
         
     }
     .image img{
-        
         margin-top: 10%;
         display: inline;
 
     }
-    .small-display > p{
+    /* .small-display > p{
         margin-top: 20px;
         display: inline;
-    }
+
+    } */
+   
+
     .small-display > img{
         display: inline;
         margin-top: 50px;
@@ -119,6 +141,7 @@ li.nav-item{
 }
 .business-1{
     background-color: #d8e7eb;
+    
 }
 .business-1 > img{
     width: 50%;
@@ -126,35 +149,42 @@ li.nav-item{
 }
 .business-1 h1{
     margin-top: 10%;
-    margin-left: 7%;
+    margin-left: 18%;
 
 }
 .business-1 p{
     max-width: 450px;
-    margin-left: 7%;
+    margin-left: 18%;
 }
 .business-2{
     background-color: #e7f0e4;
     word-wrap: break-word;
 
 }
-.business-2 h4,p,h1{
+.business-2 h4,h1{
     margin-top: 10%;
     margin-left: 7%;
     
 
+}
+.business-2 p{
+    margin-left: 7%;
 }
 .business-2 > img{
     margin-left: 30%;
     margin-top: 10%;
     width: 40%;
 }
-
+/* ----footer---- */
 footer{
+    margin-top: 5%;
     background-color: #273443;
     color: white;
 }
 .foot{
     width: 200px;
     height: auto;
+}
+.foot > ul{
+    list-style: none;
 }
