--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* ----navbar---- */
 .small-display{
     overflow: hidden;
 }
@@ -24,6 +25,7 @@ li.nav-item{
     background-color: #128c7e;
     z-index: 1;
 }
+/* ----home section---- */
 .image img{
     display: none;
 }
@@ -58,11 +60,14 @@ li.nav-item{
         border-radius: 40px;
         color: #19d69a;
     }
+    .middle{
+        margin-top: 2%;
+    }
 }
 
 @media screen and (max-width:1000px) {
     
-    #no{
+    #whatsApp-icon{
         display: none;
     }
     .contents p{
@@ -92,13 +97,6 @@ li.nav-item{
         display: inline;
 
     }
-    /* .small-display > p{
-        margin-top: 20px;
-        display: inline;
-
-    } */
-   
-
     .small-display > img{
         display: inline;
         margin-top: 50px;
@@ -124,23 +122,25 @@ li.nav-item{
         border-radius: 40px;
         color: #19d69a;
     }
- 
+    
 
 }
-.container{
-    margin-top: 10%;
+.home-1{
+    padding: 10%;
+    padding-left: 10%;
 }
-
 .home-1 p,h2,a{
-   /* margin-left: 20%; */
     word-wrap: break-word;
-    /* width: 100px; */
 }
 .home-2 img{
-    width: 50%;
+    width: 56%;
 }
+
+/* ------middle section------ */
+
 .business-1{
     background-color: #d8e7eb;
+    width: 90%;
     
 }
 .business-1 > img{
@@ -187,4 +187,12 @@ footer{
 }
 .foot > ul{
     list-style: none;
+}
+.second-footer{
+    width: 100%;
+    height: 50px;
+    background-color: black;
+}
+.container-fluid{
+    padding: 2%;
 }
